epic 4 dev complete
